--- a/week0/main.css
+++ b/week0/main.css
@@ -1,1 +1,72 @@
+.text-just-text {
+  color: white;
+  }
+
+#link-to {
+  text-align: center;
+   font-size: 35px;
+  color: blue;
+}
+
+#planet-list {
+  text-align: center;
+  font-size: 30px;
+  font-style: italic;
+  line-height: 2.0em;
+  color: white;
+}
+
+
+body {
+  background-color: grey;
+  font-size: 20px;
+  font-style: italic;
+  line-height: 2.0em;
+}
+
+table {
+  text-align: center;
+}
+
+img {
+  width: 50%;
+  margin: 1px auto;
+  display: block;
+}
+
+.Titels {
+  color: white;
+  font-family: Arial Black;
+  text-align: center;
+}
+
+h1 {
+  font-size: 50px;
+  text-decoration: underline;
+}
+
+h2 {
+  font-size: 35px;
+}
+
+h3 {
+  font-size: 35px;
+}
+
+h4 {
+    width: 40%;
+  margin: 1px auto;
+  display: block;
+  color: yellow;
+}
+
+#knoledge {
+  color: white;
+}
+
+
+
+
+</style>
+
 
